@@ -1,3 +1,8 @@
+Fri Feb 09 21:44:41 2001  George Lebl <jirka@5z.com>
+
+	* session.c, extern.c: int->gboolean cleanup, and increase cookie
+	  when applet not responding in non interactive mode
+
 Fri Feb 09 00:18:30 2001  George Lebl <jirka@5z.com>
 
 	* gnome-panel-properties.c: Apply patch from Havoc Pennington
